--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="navbar">
         <a href="#" onclick="showHomePage()">Home</a>
         <a href="#" onclick="showTicketSystem()">File a Ticket</a>
-        <a href="admin.php">Admin</a>
+        <a href="admin.html">Admin</a>
         <a href="#" onclick="showAboutPage()">About</a>
     </div>
 
